<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/dimen_12"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/file_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:textSize="@dimen/bottom_sheet_title"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dimen_16"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/file_name"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"/>

    <TextView
        android:id="@+id/add_more"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:paddingHorizontal="@dimen/dimen_16"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:drawablePadding="@dimen/dimen_32"
        android:text="@string/add_more_photos"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_baseline_photo_library_24" />
    <TextView
        android:id="@+id/rearrange_photos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:paddingHorizontal="@dimen/dimen_16"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:drawablePadding="@dimen/dimen_32"
        android:text="@string/rearrange_photos"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_baseline_reorder_24" />

</LinearLayout>