<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryVariant">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Settings"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:paddingHorizontal="@dimen/dimen_16"
        android:drawablePadding="@dimen/dimen_24"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/share_app"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:drawableStartCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/rate_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:paddingHorizontal="@dimen/dimen_16"
        android:drawablePadding="@dimen/dimen_24"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/rate_app"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:drawableStartCompat="@drawable/ic_baseline_star_rate_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/dimen_16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dark_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dark_mode"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:drawableStart="@drawable/ic_baseline_dark_mode_24"
            android:drawablePadding="22dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/version_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_sheet_item"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/dimen_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_baseline_info_24"
            android:text="@string/version"
            android:drawablePadding="@dimen/dimen_24"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <TextView
            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>