<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChooseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/primaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/help_message"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_item_msg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dimen_8"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_message"
        app:reverseLayout="true" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_16"
        android:background="@color/primaryVariant"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/more_options"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_6"
                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_next_btn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/dimen_24"
            android:text="@string/next"
            android:textSize="18sp"
            app:cornerRadius="@dimen/dimen_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>