<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/dimen_6"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="@dimen/dimen_16"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pdfThumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_pdf_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:shapeAppearance="@style/RoundedImageStyle" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pdfThumbnail" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/lockImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:shapeAppearanceOverlay="@style/CircleImageStyle"
            app:contentPadding="@dimen/dimen_2"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_baseline_lock_24"
            android:layout_marginStart="@dimen/dimen_16"
            app:layout_constraintStart_toEndOf="@id/pdfThumbnail"
            app:layout_constraintTop_toTopOf="@id/file_size"
            app:layout_constraintBottom_toBottomOf="@id/file_size"/>

        <TextView
            android:id="@+id/file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_4"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintStart_toEndOf="@id/lockImageView"
            app:layout_constraintTop_toBottomOf="@+id/file_name" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginTop="@dimen/dimen_4"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/file_size"
            app:layout_constraintTop_toBottomOf="@+id/file_name" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:alpha="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>

    <TextView
        android:id="@+id/rename_file"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_sheet_item"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/rename"
        app:drawableStartCompat="@drawable/ic_baseline_edit_24"
        android:paddingHorizontal="@dimen/dimen_16"
        android:drawablePadding="@dimen/dimen_32"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider" />
    <TextView
        android:id="@+id/share_file"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_sheet_item"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/share"
        app:drawableStartCompat="@drawable/ic_baseline_share_24"
        android:paddingHorizontal="@dimen/dimen_16"
        android:drawablePadding="@dimen/dimen_32"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rename_file" />

    <TextView
        android:id="@+id/open_file"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_sheet_item"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/open_with"
        app:drawableStartCompat="@drawable/ic_baseline_open_in_new_24"
        android:paddingHorizontal="@dimen/dimen_16"
        android:drawablePadding="@dimen/dimen_32"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_file" />

    <TextView
        android:id="@+id/delete_file"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_sheet_item"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/delete"
        app:drawableStartCompat="@drawable/ic_baseline_delete_24"
        android:paddingHorizontal="@dimen/dimen_16"
        android:drawablePadding="@dimen/dimen_32"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_file"
        app:drawableTint="?attr/colorControlNormal" />


</androidx.constraintlayout.widget.ConstraintLayout>