<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_16"
    android:paddingBottom="@dimen/dimen_8"
    tools:context=".ui.create.CreatePdfFragment">


    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="0dp"
        android:paddingTop="@dimen/dimen_8"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/file_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pdf_file_name"

        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:singleLine="true"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/password_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password (optional)"
        android:layoutDirection="rtl"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:layout_marginTop="@dimen/dimen_4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:helperTextEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_enabled">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textStyle="bold"
        android:text="Pdf quality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        android:paddingVertical="@dimen/dimen_8"/>

    <com.ritesh.imagetopdf.ui.GridRadioGroup
        android:id="@+id/quality_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <RadioButton
            android:id="@+id/ql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="Low (25%)"/>
        <RadioButton
            android:id="@+id/qm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="Medium (60%)"/>
        <RadioButton
            android:id="@+id/qh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="High (75%)"/>
        <RadioButton
            android:id="@+id/qo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:checked="true"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="Original (100%)"/>

    </com.ritesh.imagetopdf.ui.GridRadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textStyle="bold"
        android:text="Pdf orientation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        android:paddingVertical="@dimen/dimen_8"/>

    <com.ritesh.imagetopdf.ui.GridRadioGroup
        android:id="@+id/orientation_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <RadioButton
            android:id="@+id/oa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:checked="true"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="Auto"/>
        <RadioButton
            android:id="@+id/op"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="Portrait"/>
        <RadioButton
            android:id="@+id/ol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="Landscape"/>
    </com.ritesh.imagetopdf.ui.GridRadioGroup>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="Cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createPdfBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button"
            android:layout_gravity="end"
            android:text="@string/convert_to_pdf" />

    </FrameLayout>

</LinearLayout>